# HEIG_PIN

./: .gitignore
Documents/Rendus/: DeepCleaner.pptx  PIN_2022_Group20_report.docx  PIN_2022_Group22_report.docx
Projet/Validation/: 01_01_14.tlin  02_02_14.tlin  03_03_14.tlin
Src/DeepCleaner_Backend/: CMakeLists.txt  main.cpp  particle.cpp  particle.h  position.cpp  position.h  robot.cpp  robot.h  state.cpp  state.h  timeline.cpp  timeline.h  trajectory.cpp  trajectory.h  utils.cpp  utils.h
Src/DeepCleaner_UI/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  particle.cpp  particle.h  position.h  robot.cpp  robot.h  state.cpp  state.h  timeline.cpp  timeline.h  trajectory.cpp  trajectory.h  utils.cpp  utils.h
Src/JSON/: 01.constraints  01validation.stat  02.constraints  03.constraints  04.constraints  05.constraints  05.tlin  constraints.constraints
